--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
   line-height: 1.5;
   -webkit-clip-path: polygon(1% 3.84%, 40.38% 3.2%, 74.38% 1.62%, 94.63% 1.68%, 98.88% 230px, 40.38% 84.18%, 11.26% 65.44%);
           clip-path: polygon(1% 3.84%, 50.38% 4%, 74.38% 4%, 94.63% 4%, 98.88% 230px, 40.38% 84.18%, 11.26% 65.44%);
-}
+          animation: float 6s ease-in-out infinite;
+          box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+        }
 .hero_right {
   margin: 1rem auto;
   max-width: 500px;
@@ -103,7 +105,9 @@
   line-height: 1.5;
   -webkit-clip-path: polygon(2% 95.44%, 40.38% 87.18%, 98.88% 81.68%, 94.63% 10%, 74.38% 8.62%, 40.38% 8.2%, 1% 3.84%);
           clip-path: polygon(2% 95.44%, 40.38% 87.18%, 98.88% 81.68%, 94.63% 4.68%, 74.38% 4.62%, 40.38% 4.2%, 1% 3.84%);
-}
+          animation: float2 6s ease-in-out infinite;
+          box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+        }
 .hero a {
   color: #ec4699;
 }
@@ -170,6 +174,48 @@ border: 3px solid #ffcc80;
 border-radius: 5px;
 padding: 8px;
 }
+
+@keyframes float {
+	0% {
+		
+		transform: translate(0px,0px);
+	}
+	30% {
+		
+		transform: translate(5px,-10px);
+    transform: rotate(-1deg);
+    transform: skewY(-2deg);
+	}
+	100% {
+		
+		transform: translate(0px,0px);
+	}
+}
+
+@keyframes float2 {
+	0% {
+		
+		transform: translate(3px,-10px);
+	}
+	70% {
+		
+		transform: translate(0px,0px);
+    transform: rotate(1deg);
+    transform: skewY(1deg);
+	}
+	100% {
+		
+		transform: translate(3px,-10px);
+	}
+}
+
+#shape1, #shape2 { animation: fadeInAndOut 5s infinite; }
+@keyframes fadeInAndOut {
+  0% { opacity: 0.8; }
+  50% { opacity: 1; }
+  100% { opacity: 0.8; }
+}
+
 
     </style>
 </head>
