--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@ padding: 8px;
 	}
 }
 
-#shape1, #shape2 { animation: fadeInAndOut 5s infinite; }
+/* #shape1, #shape2 { animation: fadeInAndOut 5s infinite; }
 @keyframes fadeInAndOut {
   0% { opacity: 0.8; }
   50% { opacity: 1; }
   100% { opacity: 0.8; }
-}
+} */
 
 
     </style>
