--- a/index.html
+++ b/index.html
@@ -154,18 +154,16 @@
 .flex-container {
 
 display: flex;
-
 justify-content: space-around; 
 align-items: center; 
-/* flex-flow: wrap; */  
 flex-wrap: wrap; 
-align-content: space-between;
+align-content: space-around;
 
-/* background-color: #bbdefb; */
+background-color: #bbdefb3b;
 height: 100%;
 /* padding: 15px; */
-gap: 5px;
-
+gap: 0px;
+margin-top:25px;
 }
 
 .flex-container > div{
