--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
        body {
   min-height: 100vh;
   /* background: linear-gradient(to bottom, #ec4699, #ef4343, #e7b008); */
-  background: linear-gradient(to bottom, #0795c0, #F0E2A3, #F9D4BB );
+  /* background: linear-gradient(to bottom, #0795c0, #F0E2A3, #F9D4BB ); */
+  /* Location of the image */ background-image: url(space.jpg); /* Background image is centered vertically and horizontally at all times */ background-position: center center; /* Background image doesn’t tile */ background-repeat: no-repeat; /* Background image is fixed in the viewport so that it doesn’t move when the content’s height is greater than the image’s height */ background-attachment: fixed; /* This is what makes the background image rescale based on the container’s size */ background-size: cover; /* Set a background color that will be displayed while the background image is loading */ background-color: #464646; 
 }
 
 .header {
@@ -159,7 +160,7 @@ align-items: center;
 flex-wrap: wrap; 
 align-content: space-around;
 
-background-color: #bbdefb3b;
+background-color: #bbdefb24;
 height: 100%;
 /* padding: 15px; */
 gap: 0px;
